Atualização do Banner Principal e da Sessão dos Números 💪🏻

--- a/index.html
+++ b/index.html
@@ -35,5 +35,50 @@
 
     </header>
 
+    <main>
+
+     <!-- Sessão 1 -->
+
+      <section class="session1">
+
+        <div class="TextosBanner1">
+
+          <h1>Dê uma segunda vida aos seus eletrônicos!</h1>
+          <p> Conectamos pessoas que querem doar eletrônicos em bom estado com quem precisa deles. Simples, gratuito e sustentável!</p>
+
+      <div class="buttonsbanner1">
+          <a href="#" class="btn btnprimeiro"><img src="img/ICON1.png" alt="Ícone de presente">Quero doar</a>
+          <a href="#" class="btn btnsegundo"><img src="img/ICON2.png" alt="Ícone de presente">Quero adquirir</a>
+      </div>
+
+        </div>
+
+        <img src="img/reciclagem.png" alt="Imagem de Reciclagem" class="ImagemBanner">
+
+      </section>
+
+      <!-- BANNER COM OS NÚMEROS -->
+
+      <section class="session2">
+
+        <div class="item">
+          <h3>2.5k+</h3>
+          <p>Eletrônicos doados</p>
+        </div>
+        <div class="item">
+          <h3>1.8k+</h3>
+          <p>Famílias beneficiadas</p>
+        </div>
+        <div class="item">
+          <h3>95%</h3>
+          <p>Satisfação dos usuários</p>
+        </div>
+
+      </section>
+
+
+
+    </main>
+
 </body>
 </html>
