Atualização da Sessão Como Funciona 🏆

--- a/index.html
+++ b/index.html
@@ -76,7 +76,97 @@
 
       </section>
 
+      <!-- COMO FUNCIONA SESSÃO -->
 
+      <section class="session3-comofunciona">
+        <h2>Como funciona?</h2>
+        <p class="subtitulo">É mais fácil que trocar a pilha do controle!</p>
+
+        <div class="cards-container">
+
+          <div class="card doadores">
+
+           <h3 class="h3-doadores"> <img src="img/Doadores.png" alt="Icon de doadores" /> Para Doadores</h3>
+           <p>Transforme seu "lixo eletrônico" no tesouro de alguém</p>
+           
+           <div class="itenscard">
+            <p class="numbercard numbergreen">1</p>
+            <div class="textcard">
+              <h4>Cadastre seu eletrônico</h4>
+              <p>Tire umas fotos, descreva o estado e pronto!</p>
+            </div>
+
+          </div>
+
+          <div class="itenscard">
+             <p class="numbercard numbergreen">2</p>
+
+             <div class="textcard">
+              <h4>Aguarde o match</h4>
+              <p>Alguém vai se interessar pelo seu item</p>
+             </div>
+
+          </div>
+
+          <div class="itenscard">
+
+            <p class="numbercard numbergreen">3</p>
+
+            <div class="textcard">
+              <h4>Combine a entrega</h4>
+              <p>Vocês decidem como fazer a entrega</p>
+
+            </div>
+          </div>
+
+          </div>
+
+        <div class="card adquirentes">
+
+          <h3 class="h3-adquirente">
+            <img src="img/icon_Adquirente.png" alt="Icon de Doadores" /> Para
+            Adquirentes
+          </h3>
+
+          <p>Encontre o eletrônico dos seus sonhos de graça</p>
+
+          <div class="itenscard">
+
+            <p class="numbercard numberblue">1</p>
+
+            <div class="textcard">
+              <h4>Explore os itens</h4>
+              <p>Navegue pelos eletrônicos disponíveis</p>
+            </div>
+
+          </div>
+
+          <div class="itenscard">
+
+            <p class="numbercard numberblue">2</p>
+
+            <div class="textcard">
+              <h4>Demonstre interesse</h4>
+              <p>Clique em "Tenho interesse" no item</p>
+            </div>
+
+          </div>
+
+            <div class="itenscard">
+
+              <p class="numbercard numberblue">3</p>
+
+              <div class="textcard">
+              <h4>Receba seu novo gadget</h4>
+              <p>Combine com o doador e seja feliz!</p>
+              </div>
+
+            </div>
+          </div>
+
+        </div>
+
+      </section>
 
     </main>
 
