adição da sessão de produtos disponíveis e responsividade ✨

--- a/index.html
+++ b/index.html
@@ -168,6 +168,37 @@
 
       </section>
 
+      <section class="produtos-disponiveis">
+        <h2>Produtos disponíveis</h2>
+        <p class="subtitulo">Categorias mais populares</p>
+
+        <div class="cards-container">
+          <!-- CARD 1 -->
+          <div class="card">
+            <img src="img/Fone.png" alt="Imagem de fones de ouvido" />
+            <h3>Fones</h3>
+            <p>Fones em ótimo estado, prontos pra uso.</p>
+            <button class="btn">Quero adquirir</button>
+          </div>
+
+          <!-- CARD 2 -->
+          <div class="card">
+            <img src="img/Notebook.png" alt="Imagem de notebook" />
+            <h3>Notebooks</h3>
+            <p>Notebooks funcionando direitinho, prontos pra você usar.</p>
+            <button class="btn">Quero adquirir</button>
+          </div>
+
+          <!-- CARD 3 -->
+          <div class="card">
+            <img src="img/Smartphones.png" alt="Imagem de smartphones" />
+            <h3>Smartphones</h3>
+            <p>Celulares em ótimo estado, prontos para uma nova jornada.</p>
+            <button class="btn">Quero adquirir</button>
+          </div>
+        </div>
+      </section>
+
     </main>
 
 </body>
