🧱 criação do layout responsivo dos depoimentos

--- a/index.html
+++ b/index.html
@@ -168,6 +168,8 @@
 
       </section>
 
+      <!-- SESSÃO 4 PRODUTOS DISPONÍVEIS -->
+
       <section class="produtos-disponiveis">
         <h2>Produtos disponíveis</h2>
         <p class="subtitulo">Categorias mais populares</p>
@@ -198,6 +200,67 @@
           </div>
         </div>
       </section>
+
+      <!-- SESSÃO 5 FEEDBACK DEPOIMENTOS -->
+
+      <section class="depoimentos">
+           <h2>O que o pessoal tá falando?</h2>
+          <p class="subtitulo">Histórias reais de quem já usou</p>
+
+          <div class="depoimentos-container">
+
+            <!-- CARD 1 -->
+
+            <div class="depoimento-card">
+              <div class="stars">⭐⭐⭐⭐⭐</div>
+              <p class="texto"> "Doei meu notebook antigo e em 2 dias já tinha alguém interessado! Ver a felicidade do estudante que recebeu não tem preço! 😊" 
+              </p>
+              <div class="usuario">
+                <div class="icone doador">
+                  <img src="img/icon_Doador.png" alt="ícone doador" />
+                </div>
+                <div class="info-usuario">
+                  <h4>João Santos</h4>
+                  <p>Doador</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- CARD 2 -->
+            
+            <div class="depoimento-card">
+              <div class="stars">⭐⭐⭐⭐⭐</div>
+              <p class="texto"> "Consegui um iPhone 12 em perfeito estado! A dona anterior cuidou super bem. Economizei uma grana e ainda ajudei o meio ambiente! 🌱"
+              </p>
+              <div class="usuario">
+                <div class="icone adquirente">
+                  <img src="img/icon_Adquirente.png" alt="ícone adquirente" />
+                </div>
+                <div class="info-usuario">
+                  <h4>Maria Silva</h4>
+                  <p>Adquirente</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- CARD 3 -->
+
+            <div class="depoimento-card">
+              <div class="stars">⭐⭐⭐⭐⭐</div>
+                <p class="texto"> "Plataforma incrível! Já doei 3 itens e adquiri 2. A comunidade é super respeitosa e o processo é muito fácil! 👏"
+                </p>
+                <div class="usuario">
+                  <div class="icone ativa">
+                    <img src="img/icon_userAtivo.png" alt="ícone usuária ativa" />
+                  </div>
+                <div class="info-usuario">
+                  <h4>Ana Costa</h4>
+                  <p>Usuária ativa</p>
+                </div>
+              </div>
+            </div>
+          </div>
+       </section>
 
     </main>
 
