--- a/index.html
+++ b/index.html
@@ -262,6 +262,84 @@
           </div>
        </section>
 
+      <!-- CTA -->
+
+<section class="cta-section">
+  <h2>Pronto para fazer a diferença?</h2>
+  <p>
+    Junte-se à nossa comunidade e ajude a criar um mundo mais sustentável,
+    um eletrônico de cada vez!
+  </p>
+  <div class="cta-buttons">
+    <a href="#" class="btn-primary">Começar Agora</a>
+    <a href="#" class="btn-secondary">Saber Mais</a>
+  </div>
+</section>
+
+<!-- FOOTER -->
+<footer class="footer">
+  <div class="footer-container">
+
+    <!-- Coluna 1 -->
+    <div class="footer-col">
+      <div class="logo-footer">
+        <img src="img/LogoBranco.png" alt="ReciclaTech" />
+      </div>
+      <p>Conectando pessoas através da sustentabilidade e tecnologia.</p>
+    </div>
+
+    <!-- Coluna 2 -->
+    <div class="footer-col">
+      <h3>Links Rápidos</h3>
+      <ul>
+        <li><a href="#">Como Funciona</a></li>
+        <li><a href="#">Doar</a></li>
+        <li><a href="#">Adquirir</a></li>
+        <li><a href="#">Contato</a></li>
+      </ul>
+    </div>
+
+    <!-- Coluna 3 -->
+    <div class="footer-col">
+      <h3>Suporte</h3>
+      <ul>
+        <li><a href="#">FAQ</a></li>
+        <li><a href="#">Termos de Uso</a></li>
+        <li><a href="#">Privacidade</a></li>
+        <li><a href="#">Ajuda</a></li>
+      </ul>
+    </div>
+
+    <!-- Coluna 4 -->
+    <div class="footer-col">
+       <h3>Redes Sociais</h3>
+       <p>Siga-nos para novidades e dicas de sustentabilidade!</p>
+        
+       <div class="social-icons">
+         <a href="https://facebook.com" target="_blank">
+           <img src="img/facebook.png" alt="Facebook" />
+         </a>
+
+         <a href="https://instagram.com" target="_blank">
+          <img src="img/email.png" alt="E-mail" />
+         </a>
+
+         <a href="https://twitter.com" target="_blank">
+          <img src="img/Twitter.png" alt="Twitter" />
+         </a>
+        </div>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <p>
+      © 2025 ReciclaTech. Todos os direitos reservados.
+      Feito com <span class="heart">💚</span> para um mundo melhor.
+    </p>
+    
+  </div>
+</footer>
+
     </main>
 
 </body>
